--- a/packages/@textlint/fixer-formatter/package.json
+++ b/packages/@textlint/fixer-formatter/package.json
@@ -1,62 +1,63 @@
 {
-    "name": "@textlint/fixer-formatter",
-    "version": "13.3.3",
-    "description": "textlint output formatter for fixer",
-    "keywords": [
-        "AST",
-        "lint",
-        "linting",
-        "markdown",
-        "plugable",
-        "text",
-        "textlint"
-    ],
-    "homepage": "https://github.com/textlint/textlint#readme",
-    "bugs": {
-        "url": "https://github.com/textlint/textlint/issues"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/textlint/textlint.git"
-    },
-    "license": "MIT",
-    "author": "azu",
-    "main": "lib/src/index.js",
-    "types": "lib/src/index.d.ts",
-    "files": [
-        "bin/",
-        "lib/",
-        "module/",
-        "src/",
-        "!*.tsbuildinfo"
-    ],
-    "scripts": {
-        "build": "tsc -b && tsc -b tsconfig.module.json",
-        "clean": "rimraf lib/ module/",
-        "prepack": "npm run build",
-        "test": "mocha"
-    },
-    "dependencies": {
-        "@textlint/module-interop": "^13.3.3",
-        "@textlint/types": "^13.3.3",
-        "chalk": "^4.1.2",
-        "debug": "^4.3.4",
-        "diff": "^4.0.2",
-        "is-file": "^1.0.0",
-        "string-width": "^4.2.3",
-        "strip-ansi": "^6.0.1",
-        "text-table": "^0.2.0",
-        "try-resolve": "^1.0.1"
-    },
-    "devDependencies": {
-        "@types/mocha": "^9.1.1",
-        "@types/node": "^18.17.3",
-        "mocha": "^10.2.0",
-        "rimraf": "^3.0.2",
-        "ts-node": "^10.9.1",
-        "typescript": "~4.9.4"
-    },
-    "publishConfig": {
-        "access": "public"
-    }
+  "name": "@textlint/fixer-formatter",
+  "version": "13.3.3",
+  "description": "textlint output formatter for fixer",
+  "keywords": [
+    "AST",
+    "lint",
+    "linting",
+    "markdown",
+    "plugable",
+    "text",
+    "textlint"
+  ],
+  "homepage": "https://github.com/textlint/textlint#readme",
+  "bugs": {
+    "url": "https://github.com/textlint/textlint/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/textlint/textlint.git"
+  },
+  "license": "MIT",
+  "author": "azu",
+  "main": "lib/src/index.js",
+  "types": "lib/src/index.d.ts",
+  "files": [
+    "bin/",
+    "lib/",
+    "module/",
+    "src/",
+    "!*.tsbuildinfo"
+  ],
+  "scripts": {
+    "build": "tsc -b && tsc -b tsconfig.module.json",
+    "clean": "rimraf lib/ module/",
+    "prepack": "npm run build",
+    "test": "mocha"
+  },
+  "dependencies": {
+    "@textlint/module-interop": "^13.3.3",
+    "@textlint/types": "^13.3.3",
+    "chalk": "^4.1.2",
+    "debug": "^4.3.4",
+    "diff": "^4.0.2",
+    "is-file": "^1.0.0",
+    "string-width": "^4.2.3",
+    "strip-ansi": "^6.0.1",
+    "text-table": "^0.2.0",
+    "try-resolve": "^1.0.1"
+  },
+  "devDependencies": {
+    "@types/diff": "^4.0.2",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^18.17.3",
+    "mocha": "^10.2.0",
+    "rimraf": "^3.0.2",
+    "ts-node": "^10.9.1",
+    "typescript": "~4.9.4"
+  },
+  "publishConfig": {
+    "access": "public"
+  }
 }
