--- a/packages/@textlint/linter-formatter/package.json
+++ b/packages/@textlint/linter-formatter/package.json
@@ -1,65 +1,66 @@
 {
-    "name": "@textlint/linter-formatter",
-    "version": "13.3.3",
-    "description": "textlint output formatter",
-    "homepage": "https://github.com/textlint/textlint/tree/master/packages/@textlint/linter-formatter",
-    "bugs": {
-        "url": "https://github.com/textlint/textlint/issues"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/textlint/textlint.git"
-    },
-    "license": "MIT",
-    "author": "azu",
-    "main": "lib/src/index.js",
-    "module": "module/src/index.js",
-    "types": "lib/src/index.d.ts",
-    "directories": {
-        "test": "test/"
-    },
-    "files": [
-        "bin/",
-        "lib/",
-        "module/",
-        "src/",
-        "!*.tsbuildinfo"
-    ],
-    "scripts": {
-        "build": "tsc -b && tsc -b tsconfig.module.json",
-        "clean": "rimraf lib/ module/",
-        "prepack": "npm run build",
-        "test": "mocha"
-    },
-    "dependencies": {
-        "@azu/format-text": "^1.0.2",
-        "@azu/style-format": "^1.0.1",
-        "@textlint/module-interop": "^13.3.3",
-        "@textlint/types": "^13.3.3",
-        "chalk": "^4.1.2",
-        "debug": "^4.3.4",
-        "is-file": "^1.0.0",
-        "js-yaml": "^3.14.1",
-        "lodash": "^4.17.21",
-        "pluralize": "^2.0.0",
-        "string-width": "^4.2.3",
-        "strip-ansi": "^6.0.1",
-        "table": "^6.8.1",
-        "text-table": "^0.2.0",
-        "try-resolve": "^1.0.1"
-    },
-    "devDependencies": {
-        "@types/mocha": "^9.1.1",
-        "@types/node": "^18.17.3",
-        "chai": "^4.3.7",
-        "mocha": "^10.2.0",
-        "proxyquire": "^2.1.3",
-        "rimraf": "^3.0.2",
-        "sinon": "^1.17.7",
-        "ts-node": "^10.9.1",
-        "typescript": "~4.9.4"
-    },
-    "publishConfig": {
-        "access": "public"
-    }
+  "name": "@textlint/linter-formatter",
+  "version": "13.3.3",
+  "description": "textlint output formatter",
+  "homepage": "https://github.com/textlint/textlint/tree/master/packages/@textlint/linter-formatter",
+  "bugs": {
+    "url": "https://github.com/textlint/textlint/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/textlint/textlint.git"
+  },
+  "license": "MIT",
+  "author": "azu",
+  "main": "lib/src/index.js",
+  "module": "module/src/index.js",
+  "types": "lib/src/index.d.ts",
+  "directories": {
+    "test": "test/"
+  },
+  "files": [
+    "bin/",
+    "lib/",
+    "module/",
+    "src/",
+    "!*.tsbuildinfo"
+  ],
+  "scripts": {
+    "build": "tsc -b && tsc -b tsconfig.module.json",
+    "clean": "rimraf lib/ module/",
+    "prepack": "npm run build",
+    "test": "mocha"
+  },
+  "dependencies": {
+    "@azu/format-text": "^1.0.2",
+    "@azu/style-format": "^1.0.1",
+    "@textlint/module-interop": "^13.3.3",
+    "@textlint/types": "^13.3.3",
+    "chalk": "^4.1.2",
+    "debug": "^4.3.4",
+    "js-yaml": "^3.14.1",
+    "lodash": "^4.17.21",
+    "pluralize": "^2.0.0",
+    "string-width": "^4.2.3",
+    "strip-ansi": "^6.0.1",
+    "table": "^6.8.1",
+    "text-table": "^0.2.0",
+    "try-resolve": "^1.0.1"
+  },
+  "devDependencies": {
+    "@types/js-yaml": "^3.12.5",
+    "@types/lodash": "^4.14.197",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^18.17.3",
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0",
+    "proxyquire": "^2.1.3",
+    "rimraf": "^3.0.2",
+    "sinon": "^1.17.7",
+    "ts-node": "^10.9.1",
+    "typescript": "~4.9.4"
+  },
+  "publishConfig": {
+    "access": "public"
+  }
 }
