feat(textlint-script): support `import()`
textlint-script should not transpile `import()` to `require()`.
It will be required for ESM support.

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "packages/@textlint/*",
     "packages/textlint-scripts/example",
     "packages/textlint-scripts/example-ts",
+    "packages/textlint-scripts/example-dynamic-import",
     "test/*",
     "website"
   ],
