--- a/examples/use-as-ts-module/package.json
+++ b/examples/use-as-ts-module/package.json
@@ -1,34 +1,30 @@
 {
-    "name": "textlint-example-use-as-ts-module",
-    "version": "13.4.1",
-    "private": true,
-    "license": "MIT",
-    "author": "0x6b",
-    "main": "lib/src/index.js",
-    "scripts": {
-        "prebuild": "npm-run-all clean",
-        "build": "tsc -b",
-        "clean": "rimraf lib/ module/",
-        "pretest": "npm-run-all build",
-        "test": "node lib/src/index.js fixtures/success.md",
-        "test:ci": "npm test"
-    },
-    "dependencies": {
-        "textlint": "^13.4.1",
-        "textlint-rule-no-exclamation-question-mark": "^1.0.2",
-        "textlint-rule-no-todo": "^2.0.1"
-    },
-    "devDependencies": {
-        "@types/node": "^18.7.16",
-        "npm-run-all": "^4.1.5",
-        "rimraf": "^3.0.2",
-        "typescript": "~4.9.4"
-    },
-    "files": [
-        "bin/",
-        "lib/",
-        "module/",
-        "src/",
-        "!*.tsbuildinfo"
-    ]
+  "name": "textlint-example-use-as-ts-module",
+  "version": "13.4.1",
+  "private": true,
+  "license": "MIT",
+  "type": "module",
+  "author": "0x6b",
+  "main": "lib/src/index.js",
+  "scripts": {
+    "build": "tsc --build",
+    "clean": "tsc --build --clean",
+    "test": "npm run build && node lib/src/index.js",
+    "test:ci": "npm test"
+  },
+  "dependencies": {
+    "textlint": "^13.4.1",
+    "textlint-rule-no-todo": "^2.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^18.7.16",
+    "typescript": "~4.9.4"
+  },
+  "files": [
+    "bin/",
+    "lib/",
+    "module/",
+    "src/",
+    "!*.tsbuildinfo"
+  ]
 }
