--- a/packages/textlint/package.json
+++ b/packages/textlint/package.json
@@ -73,6 +73,7 @@
     "unique-concat": "^0.2.2"
   },
   "devDependencies": {
+    "@textlint/legacy-textlint-core": "^13.4.1",
     "@types/clone": "^2.1.4",
     "@types/glob": "^8.1.0",
     "@types/mocha": "^9.1.1",
