--- a/packages/@textlint/legacy-textlint-core/tsconfig.json
+++ b/packages/@textlint/legacy-textlint-core/tsconfig.json
@@ -16,10 +16,13 @@
   ],
   "references": [
     {
-      "path": "../ast-node-types"
+      "path": "../kernel"
     },
     {
-      "path": "../markdown-to-ast"
+      "path": "../textlint-plugin-text"
+    },
+    {
+      "path": "../textlint-plugin-markdown"
     }
   ]
 }
