--- a/packages/textlint/tsconfig.json
+++ b/packages/textlint/tsconfig.json
@@ -55,6 +55,9 @@
     },
     {
       "path": "../@textlint/utils"
+    },
+    {
+      "path": "../@textlint/legacy-textlint-core"
     }
   ]
 }
