CI: add `npm run build` before test:example
npm run test:example ignore `textlint`'s build
It may case "Error: Cannot find module '../lib/src/cli'"

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,10 +21,12 @@ jobs:
           cache: 'npm'
       - name: Install
         run: npm ci
+      - name: Build
+        run: npm run build
       - name: Test
-        run: |
-          npm test
-          npm run test:examples
+        run: npm test
+      - name: Test Examples
+        run: npm run test:examples
 
   benchmark:
     name: Benchmark
