chore!: move gulp-textlint to out of monorepo (#1319)
* chore!: move gulp-textlint to out of monorepo

* Update package-lock.json

* chore: update lock

* fix type

* CI: add `npm run build` before test:example

npm run test:example ignore `textlint`'s build
It may case "Error: Cannot find module '../lib/src/cli'"

* test: fix normalize file path

* test: fix normalize file path

* test: fix normalize file path

* test: fix normalize file path

* test: fix normalize file path

* CI: fix test:ci dependency

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,9 +22,9 @@ jobs:
       - name: Install
         run: npm ci
       - name: Test
-        run: |
-          npm test
-          npm run test:examples
+        run: npm test
+      - name: Test Examples
+        run: npm run test:examples
 
   benchmark:
     name: Benchmark
