fix: update typescript and use `import` for loading ts-node/esm

--- a/packages/@textlint/ast-node-types/.mocharc.json
+++ b/packages/@textlint/ast-node-types/.mocharc.json
@@ -1,6 +1,6 @@
 {
     "timeout": 5000,
-    "loader": "ts-node/esm",
+    "import": "ts-node/esm",
     "forbidOnly": true,
     "spec": ["test/**/*.ts"]
 }
