--- a/examples/use-as-ts-module/tsconfig.json
+++ b/examples/use-as-ts-module/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "lib",
-    "module": "ESNext"
+    "module": "ESNext",
+    "moduleResolution": "Node"
   },
   "references": [
     {
