--- a/examples/use-as-ts-module/tsconfig.json
+++ b/examples/use-as-ts-module/tsconfig.json
@@ -2,8 +2,8 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "lib",
-    "module": "ESNext",
-    "moduleResolution": "Node"
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext"
   },
   "references": [
     {
