--- a/packages/@textlint/ast-node-types/tsconfig.module.json
+++ b/packages/@textlint/ast-node-types/tsconfig.module.json
@@ -2,6 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "module": "ESNext",
-    "outDir": "./module/",
+    "moduleResolution": "Node",
+    "outDir": "./module/"
   }
 }
