--- a/packages/textlint-scripts/example/.gitignore
+++ b/packages/textlint-scripts/example/.gitignore
@@ -81,5 +81,5 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 
-
-/lib
+# commit lib for testing
+!lib/
