--- a/.github/workflows/release-canary.yml
+++ b/.github/workflows/release-canary.yml
@@ -22,7 +22,7 @@ jobs:
       - name: install
         run: npm ci
       - name: Publish
-        run: npm exec lerna publish --canary --preid next --dist-tag next --force-publish='*' --no-push --no-git-tag-version --yes
+        run: npm exec -- lerna publish --canary --preid next --dist-tag next --force-publish='*' --no-push --no-git-tag-version --yes
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
