--- a/packages/@textlint/markdown-to-ast/package.json
+++ b/packages/@textlint/markdown-to-ast/package.json
@@ -37,18 +37,17 @@
         "@textlint/ast-node-types": "^14.0.4",
         "debug": "^4.3.4",
         "mdast-util-gfm-autolink-literal": "^0.1.3",
+        "neotraverse": "^0.6.15",
         "remark-footnotes": "^3.0.0",
         "remark-frontmatter": "^3.0.0",
         "remark-gfm": "^1.0.0",
         "remark-parse": "^9.0.0",
-        "traverse": "^0.6.8",
         "unified": "^9.2.2"
     },
     "devDependencies": {
         "@textlint/ast-tester": "^14.0.4",
         "@types/mocha": "^9.1.1",
         "@types/node": "^18.19.9",
-        "@types/traverse": "^0.6.36",
         "mkdirp": "^1.0.4",
         "mocha": "^10.7.0",
         "rimraf": "^3.0.2",
