--- a/packages/textlint/package.json
+++ b/packages/textlint/package.json
@@ -60,7 +60,8 @@
     "debug": "^4.3.4",
     "file-entry-cache": "^5.0.1",
     "get-stdin": "^5.0.1",
-    "glob": "^10.4.5",
+    "glob": "^7.2.3",
+    "tiny-readdir-glob-gitignore": "^2.0.5",
     "md5": "^2.3.0",
     "mkdirp": "^0.5.6",
     "optionator": "^0.9.3",
