CI: enable debug

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,8 @@ jobs:
         run: npm ci
       - name: Test
         run: npm test
+        env:
+          DEBUG: "textlint:*"
       - name: Test Examples
         run: npm run test:examples
 
