--- a/packages/textlint-scripts/examples/example-ts/package.json
+++ b/packages/textlint-scripts/examples/example-ts/package.json
@@ -1,8 +1,12 @@
 {
   "name": "textlint-scripts-example-ts",
+  "description": "Example of textlint-scripts with TypeScript",
   "version": "14.1.0",
   "private": true,
+  "license": "MIT",
+  "author": "azu",
   "scripts": {
+    "init-readme": "textlint-scripts init --yes",
     "build": "textlint-scripts build",
     "test": "textlint-scripts test"
   },
