--- a/packages/@textlint/config-loader/package.json
+++ b/packages/@textlint/config-loader/package.json
@@ -50,7 +50,7 @@
         "@textlint/utils": "^14.2.1",
         "debug": "^4.3.4",
         "rc-config-loader": "^4.1.3",
-        "try-resolve": "^1.0.1"
+        "@textlint/resolver": "^14.2.1"
     },
     "devDependencies": {
         "@types/mocha": "^9.1.1",
@@ -59,7 +59,7 @@
         "prettier": "^2.3.0",
         "rimraf": "^3.0.2",
         "ts-node": "^10.9.2",
-        "typescript": "~5.3.3"
+        "typescript": "~5.6.3"
     },
     "publishConfig": {
         "access": "public"
