--- a/packages/@textlint/resolver/.mocharc.json
+++ b/packages/@textlint/resolver/.mocharc.json
@@ -1,8 +1,8 @@
 {
-  "$schema": "https://json.schemastore.org/mocharc",
-  "loader": "ts-node/esm",
+  "timeout": 5000,
+  "import": "ts-node/esm",
+  "forbidOnly": true,
   "spec": [
-    "test/**/*.ts"
-  ],
-  "timeout": 10000
+    "test/**/*.{js,ts}"
+  ]
 }
