--- a/packages/@textlint/config-loader/package.json
+++ b/packages/@textlint/config-loader/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@textlint/config-loader",
-    "version": "14.2.1",
+    "version": "14.3.0",
     "description": "Config loader for textlint. .textlintrc loader",
     "keywords": [
         "textlint"
@@ -44,13 +44,13 @@
         "trailingComma": "none"
     },
     "dependencies": {
-        "@textlint/kernel": "^14.2.1",
-        "@textlint/module-interop": "^14.2.1",
-        "@textlint/types": "^14.2.1",
-        "@textlint/utils": "^14.2.1",
+        "@textlint/kernel": "^14.3.0",
+        "@textlint/module-interop": "^14.3.0",
+        "@textlint/resolver": "^14.3.0",
+        "@textlint/types": "^14.3.0",
+        "@textlint/utils": "^14.3.0",
         "debug": "^4.3.4",
-        "rc-config-loader": "^4.1.3",
-        "@textlint/resolver": "^14.2.1"
+        "rc-config-loader": "^4.1.3"
     },
     "devDependencies": {
         "@types/mocha": "^9.1.1",
