--- a/packages/@textlint/fixer-formatter/package.json
+++ b/packages/@textlint/fixer-formatter/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@textlint/fixer-formatter",
-  "version": "14.2.1",
+  "version": "14.3.0",
   "description": "textlint output formatter for fixer",
   "keywords": [
     "AST",
@@ -37,15 +37,15 @@
     "test": "mocha"
   },
   "dependencies": {
-    "@textlint/module-interop": "^14.2.1",
-    "@textlint/types": "^14.2.1",
+    "@textlint/module-interop": "^14.3.0",
+    "@textlint/resolver": "^14.3.0",
+    "@textlint/types": "^14.3.0",
     "chalk": "^4.1.2",
     "debug": "^4.3.4",
     "diff": "^5.2.0",
     "string-width": "^4.2.3",
     "strip-ansi": "^6.0.1",
-    "text-table": "^0.2.0",
-    "@textlint/resolver": "^14.2.1"
+    "text-table": "^0.2.0"
   },
   "devDependencies": {
     "@types/diff": "^4.0.2",
