fix: add type=commonjs

--- a/packages/@textlint/feature-flag/package.json
+++ b/packages/@textlint/feature-flag/package.json
@@ -15,6 +15,7 @@
     },
     "license": "MIT",
     "author": "azu",
+    "type": "commonjs",
     "main": "./lib/src/index.js",
     "types": "./lib/src/index.d.ts",
     "module": "./module/src/index.js",
