--- a/packages/@textlint/module-interop/package.json
+++ b/packages/@textlint/module-interop/package.json
@@ -19,6 +19,7 @@
     },
     "license": "MIT",
     "author": "azu",
+    "type": "commonjs",
     "main": "lib/src/index.js",
     "module": "module/src/index.js",
     "types": "lib/src/index.d.ts",
