--- a/packages/@textlint/config-loader/package.json
+++ b/packages/@textlint/config-loader/package.json
@@ -15,6 +15,7 @@
     },
     "license": "MIT",
     "author": "azu",
+    "type": "commonjs",
     "sideEffects": false,
     "main": "lib/src/index.js",
     "module": "module/src/index.js",
