--- a/packages/@textlint/fixer-formatter/package.json
+++ b/packages/@textlint/fixer-formatter/package.json
@@ -21,6 +21,7 @@
   },
   "license": "MIT",
   "author": "azu",
+  "type": "commonjs",
   "main": "lib/src/index.js",
   "types": "lib/src/index.d.ts",
   "files": [
