--- a/packages/@textlint/kernel/package.json
+++ b/packages/@textlint/kernel/package.json
@@ -15,6 +15,7 @@
     },
     "license": "MIT",
     "author": "azu",
+    "type": "commonjs",
     "main": "lib/src/index.js",
     "module": "./module/src/index.js",
     "typings": "lib/src/index.d.ts",
