--- a/packages/@textlint/markdown-to-ast/package.json
+++ b/packages/@textlint/markdown-to-ast/package.json
@@ -12,6 +12,7 @@
     },
     "license": "MIT",
     "author": "azu",
+    "type": "commonjs",
     "main": "lib/src/index.js",
     "module": "module/src/index.js",
     "types": "lib/src/index.d.ts",
