--- a/packages/@textlint/source-code-fixer/package.json
+++ b/packages/@textlint/source-code-fixer/package.json
@@ -16,6 +16,7 @@
     },
     "license": "MIT",
     "author": "azu",
+    "type": "commonjs",
     "sideEffects": false,
     "main": "lib/src/index.js",
     "module": "module/src/index.js",
