--- a/packages/@textlint/textlint-plugin-markdown/package.json
+++ b/packages/@textlint/textlint-plugin-markdown/package.json
@@ -17,6 +17,7 @@
     },
     "license": "MIT",
     "author": "azu",
+    "type": "commonjs",
     "types": "lib/src/index.d.ts",
     "main": "lib/src/index.js",
     "module": "module/src/index.js",
