--- a/packages/@textlint/types/package.json
+++ b/packages/@textlint/types/package.json
@@ -18,6 +18,7 @@
     },
     "license": "MIT",
     "author": "azu",
+    "type": "commonjs",
     "main": "lib/src/index.js",
     "types": "lib/src/index.d.ts",
     "directories": {
