--- a/packages/@textlint/utils/package.json
+++ b/packages/@textlint/utils/package.json
@@ -16,6 +16,7 @@
     },
     "license": "MIT",
     "author": "azu",
+    "type": "commonjs",
     "main": "lib/src/index.js",
     "module": "module/src/index.js",
     "types": "lib/src/index.d.ts",
