--- a/packages/textlint-scripts/examples/example-ts/tsconfig.json
+++ b/packages/textlint-scripts/examples/example-ts/tsconfig.json
@@ -4,7 +4,8 @@
     "module": "commonjs",
     "strict": true,
     "esModuleInterop": true,
-    "noEmit": true
+    "noEmit": true,
+    "skipLibCheck": true
   },
   "references": [
     {
