--- a/packages/@textlint/mcp/package.json
+++ b/packages/@textlint/mcp/package.json
@@ -44,12 +44,22 @@
         "tabWidth": 4
     },
     "dependencies": {
+        "@textlint/ast-node-types": "^14.7.2",
+        "@textlint/ast-traverse": "^14.7.2",
+        "@textlint/config-loader": "^14.7.2",
+        "@textlint/feature-flag": "^14.7.2",
+        "@textlint/fixer-formatter": "^14.7.2",
+        "@textlint/kernel": "^14.7.2",
+        "@textlint/linter-formatter": "^14.7.2",
+        "@textlint/module-interop": "^14.7.2",
+        "@textlint/resolver": "^14.7.2",
+        "@textlint/textlint-plugin-markdown": "^14.7.2",
+        "@textlint/textlint-plugin-text": "^14.7.2",
         "@modelcontextprotocol/sdk": "^1.12.1",
         "textlint": "^14.7.2",
         "zod": "^3.25.51"
     },
     "devDependencies": {
-        "@textlint/resolver": "^14.7.2",
         "@types/node": "^18.19.9",
         "prettier": "^2.7.1",
         "rimraf": "^6.0.1",
