--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -10,18 +10,21 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4 # v4.2.2
       - name: Setup Node.js
         uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
         with:
           node-version: 22
-          cache: "npm"
+          cache: "pnpm"
       - name: Install
-        run: npm ci
+        run: pnpm ci
       - name: Build
         run: |
-          npm run build --scope textlint-website
-          npm run website
+          pnpm run build --scope textlint-website
+          pnpm run website
       - name: Deploy
         uses: peaceiris/actions-gh-pages@4f9cc6602d3f66b9c108549d475ec49e8ef4d45e # v4.0.0
         with:
