--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,19 +13,22 @@ jobs:
     name: Test(Node ${{ matrix.node }} on ${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4 # v4.2.2
       - uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
         with:
           node-version: ${{ matrix.node }}
-          cache: 'npm'
+          cache: 'pnpm'
       - name: Install
-        run: npm ci
+        run: pnpm ci
       - name: Test
-        run: npm test
+        run: pnpm test
         env:
           DEBUG: "textlint:*"
       - name: Test Examples
-        run: npm run test:examples
+        run: pnpm run test:examples
 
   benchmark:
     name: Benchmark
@@ -38,17 +41,17 @@ jobs:
       - uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
         with:
           node-version: 22
-          cache: 'npm'
+          cache: 'pnpm'
       - name: Install Hyperfine
         run: |
           wget https://github.com/sharkdp/hyperfine/releases/download/v1.15.0/hyperfine_1.15.0_amd64.deb
           sudo dpkg -i hyperfine_1.15.0_amd64.deb
       - name: Install
-        run: npm ci
+        run: pnpm ci
       - name: Build textlint
-        run: npm run build
+        run: pnpm run build
       - name: Benchmark
-        run: npm run bench
+        run: pnpm run bench
         working-directory: ./test/benchmark
       - name: Get Previous Benchmark Results
         uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
@@ -79,13 +82,13 @@ jobs:
       - uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
         with:
           node-version: 22
-          cache: 'npm'
+          cache: 'pnpm'
       - name: Install
-        run: npm ci
+        run: pnpm ci
       - name: Build textlint
-        run: npm run build
+        run: pnpm run build
       - name: Integration Tests
-        run: npm run test:integration
+        run: pnpm run test:integration
 
   documentation:
     strategy:
@@ -101,8 +104,8 @@ jobs:
       - uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
         with:
           node-version: ${{ matrix.node }}
-          cache: 'npm'
+          cache: 'pnpm'
       - name: Install
-        run: npm ci
-      - run: npm run test:docs
-      - run: npm run website
+        run: pnpm ci
+      - run: pnpm run test:docs
+      - run: pnpm run website
