--- a/.github/workflows/release-canary.yml
+++ b/.github/workflows/release-canary.yml
@@ -11,18 +11,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4 # v4.2.2
       - name: setup Node.js
         uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
         with:
-          cache: 'npm'
+          cache: 'pnpm'
           node-version: 22
-          # for publishing packages to npm
+          # for publishing packages to pnpm
           registry-url: https://registry.npmjs.org
       - name: install
-        run: npm ci
+        run: pnpm ci
       - name: Publish
-        run: npm exec -- lerna publish --canary --preid next --dist-tag next --force-publish='*' --no-push --no-git-tag-version --yes
+        run: pnpm exec -- lerna publish --canary --preid next --dist-tag next --force-publish='*' --no-push --no-git-tag-version --yes
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
