--- a/examples/perf/package.json
+++ b/examples/perf/package.json
@@ -9,7 +9,7 @@
     },
     "devDependencies": {
         "shelljs": "^0.8.5",
-        "textlint": "^14.8.1",
+        "textlint": "workspace:*",
         "textlint-rule-preset-jtf-style": "^3.0.2",
         "textlint-rule-max-ten": "^2.0.3",
         "textlint-rule-no-mix-dearu-desumasu": "^3.0.3",
