--- a/examples/plugin-extensions-option/package.json
+++ b/examples/plugin-extensions-option/package.json
@@ -11,7 +11,7 @@
     },
     "devDependencies": {
         "expected-exit-status": "^1.0.2",
-        "textlint": "^14.8.1",
+        "textlint": "workspace:*",
         "textlint-rule-no-todo": "^2.0.1"
     },
     "files": [
