--- a/packages/@textlint/config-loader/package.json
+++ b/packages/@textlint/config-loader/package.json
@@ -45,11 +45,11 @@
         "trailingComma": "none"
     },
     "dependencies": {
-        "@textlint/kernel": "^14.8.1",
-        "@textlint/module-interop": "^14.8.1",
-        "@textlint/resolver": "^14.8.1",
-        "@textlint/types": "^14.8.1",
-        "@textlint/utils": "^14.8.1",
+        "@textlint/kernel": "workspace:*",
+        "@textlint/module-interop": "workspace:*",
+        "@textlint/resolver": "workspace:*",
+        "@textlint/types": "workspace:*",
+        "@textlint/utils": "workspace:*",
         "debug": "^4.4.1",
         "rc-config-loader": "^4.1.3"
     },
