--- a/packages/textlint-scripts/examples/example-dynamic-import/package.json
+++ b/packages/textlint-scripts/examples/example-dynamic-import/package.json
@@ -11,6 +11,6 @@
     "test": "textlint-scripts test"
   },
   "devDependencies": {
-    "textlint-scripts": "^14.8.1"
+    "textlint-scripts": "workspace:*"
   }
 }
