--- a/examples/cli/package.json
+++ b/examples/cli/package.json
@@ -12,7 +12,7 @@
         "textlint": "textlint --rule no-todo '*.md'"
     },
     "devDependencies": {
-        "textlint": "^14.8.1",
+        "textlint": "workspace:*",
         "textlint-rule-no-todo": "^2.0.1"
     },
     "files": [
