--- a/examples/config-in-package-json/package.json
+++ b/examples/config-in-package-json/package.json
@@ -12,7 +12,7 @@
         "textlint": "textlint -f pretty-error README.md"
     },
     "devDependencies": {
-        "textlint": "^14.8.1",
+        "textlint": "workspace:*",
         "textlint-rule-no-todo": "^2.0.1"
     },
     "textlint": {
