--- a/examples/filter/package.json
+++ b/examples/filter/package.json
@@ -12,7 +12,7 @@
         "textlint": "textlint -f pretty-error README.md"
     },
     "devDependencies": {
-        "textlint": "^14.8.1",
+        "textlint": "workspace:*",
         "textlint-filter-rule-comments": "^1.2.2",
         "textlint-rule-no-todo": "^2.0.1"
     },
