--- a/examples/preset/package.json
+++ b/examples/preset/package.json
@@ -12,7 +12,7 @@
         "textlint": "textlint -f pretty-error README.md"
     },
     "devDependencies": {
-        "textlint": "^14.8.1",
+        "textlint": "workspace:*",
         "textlint-rule-preset-jtf-style": "^2.3.12"
     },
     "files": [
