--- a/examples/rulesdir/package.json
+++ b/examples/rulesdir/package.json
@@ -12,7 +12,7 @@
         "textlint": "textlint --rulesdir ./rules README.md"
     },
     "devDependencies": {
-        "textlint": "^14.8.1"
+        "textlint": "workspace:*"
     },
     "files": [
         "bin/",
