--- a/examples/use-as-ts-module/package.json
+++ b/examples/use-as-ts-module/package.json
@@ -14,7 +14,7 @@
     "test:ci": "npm test"
   },
   "dependencies": {
-    "textlint": "^14.8.1",
+    "textlint": "workspace:*",
     "textlint-rule-no-todo": "^2.0.1"
   },
   "devDependencies": {
