--- a/packages/@textlint/ast-node-types/package.json
+++ b/packages/@textlint/ast-node-types/package.json
@@ -29,6 +29,7 @@
         "test": "mocha"
     },
     "devDependencies": {
+        "@types/mocha": "^10.0.10",
         "mocha": "^10.8.1",
         "rimraf": "^6.0.1",
         "ts-node": "^10.9.2",
