--- a/packages/@textlint/ast-tester/package.json
+++ b/packages/@textlint/ast-tester/package.json
@@ -41,7 +41,7 @@
         "watch": "tsc -b --watch"
     },
     "dependencies": {
-        "@textlint/ast-node-types": "^14.8.1",
+        "@textlint/ast-node-types": "workspace:*",
         "debug": "^4.4.1"
     },
     "devDependencies": {
