--- a/packages/@textlint/kernel/package.json
+++ b/packages/@textlint/kernel/package.json
@@ -38,19 +38,19 @@
         "test:build": "tsc -b test"
     },
     "dependencies": {
-        "@textlint/ast-node-types": "^14.8.1",
-        "@textlint/ast-tester": "^14.8.1",
-        "@textlint/ast-traverse": "^14.8.1",
-        "@textlint/feature-flag": "^14.8.1",
-        "@textlint/source-code-fixer": "^14.8.1",
-        "@textlint/types": "^14.8.1",
-        "@textlint/utils": "^14.8.1",
+        "@textlint/ast-node-types": "workspace:*",
+        "@textlint/ast-tester": "workspace:*",
+        "@textlint/ast-traverse": "workspace:*",
+        "@textlint/feature-flag": "workspace:*",
+        "@textlint/source-code-fixer": "workspace:*",
+        "@textlint/types": "workspace:*",
+        "@textlint/utils": "workspace:*",
         "debug": "^4.4.1",
         "fast-equals": "^4.0.3",
         "structured-source": "^4.0.0"
     },
     "devDependencies": {
-        "@textlint/markdown-to-ast": "^14.8.1",
+        "@textlint/markdown-to-ast": "workspace:*",
         "@types/debug": "^4.1.12",
         "@types/mocha": "^9.1.1",
         "@types/node": "^18.19.9",
