--- a/packages/@textlint/linter-formatter/package.json
+++ b/packages/@textlint/linter-formatter/package.json
@@ -35,9 +35,9 @@
   "dependencies": {
     "@azu/format-text": "^1.0.2",
     "@azu/style-format": "^1.0.1",
-    "@textlint/module-interop": "^14.8.1",
-    "@textlint/resolver": "^14.8.1",
-    "@textlint/types": "^14.8.1",
+    "@textlint/module-interop": "workspace:*",
+    "@textlint/resolver": "workspace:*",
+    "@textlint/types": "workspace:*",
     "chalk": "^4.1.2",
     "debug": "^4.4.1",
     "js-yaml": "^3.14.1",
