--- a/packages/@textlint/source-code-fixer/package.json
+++ b/packages/@textlint/source-code-fixer/package.json
@@ -47,7 +47,7 @@
         "trailingComma": "none"
     },
     "dependencies": {
-        "@textlint/types": "^14.8.1",
+        "@textlint/types": "workspace:*",
         "debug": "^4.4.1"
     },
     "devDependencies": {
