--- a/packages/@textlint/textlint-plugin-text/package.json
+++ b/packages/@textlint/textlint-plugin-text/package.json
@@ -34,10 +34,10 @@
         "watch": "tsc -b --watch"
     },
     "dependencies": {
-        "@textlint/text-to-ast": "^14.8.1"
+        "@textlint/text-to-ast": "workspace:*"
     },
     "devDependencies": {
-        "@textlint/kernel": "^14.8.1",
+        "@textlint/kernel": "workspace:*",
         "@types/mocha": "9.1.1",
         "mocha": "^10.8.1",
         "rimraf": "^6.0.1",
