--- a/packages/textlint-scripts/examples/example/package.json
+++ b/packages/textlint-scripts/examples/example/package.json
@@ -14,6 +14,6 @@
     "prh": "^5.4.4"
   },
   "devDependencies": {
-    "textlint-scripts": "^14.8.1"
+    "textlint-scripts": "workspace:*"
   }
 }
