--- a/packages/textlint-scripts/package.json
+++ b/packages/textlint-scripts/package.json
@@ -53,7 +53,7 @@
         "cross-spawn": "^7.0.3",
         "mocha": "^10.8.1",
         "pkg-to-readme": "^3.0.1",
-        "textlint-tester": "^14.8.1"
+        "textlint-tester": "workspace:*"
     },
     "peerDependencies": {
         "ts-node": "*",
