--- a/website/package.json
+++ b/website/package.json
@@ -27,7 +27,7 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.8.1",
-    "textlint": "^14.8.1",
+    "textlint": "workspace:*",
     "textlint-filter-rule-comments": "^1.2.2",
     "textlint-rule-eslint": "^4.0.2",
     "textlint-rule-prh": "^5.3.0",
