chore: add @types/debug dependency and update pnpm workspace overrides

--- a/packages/@textlint/source-code-fixer/package.json
+++ b/packages/@textlint/source-code-fixer/package.json
@@ -51,6 +51,7 @@
         "debug": "^4.4.1"
     },
     "devDependencies": {
+        "@types/debug": "^4.1.12",
         "@types/mocha": "^9.1.1",
         "@types/node": "^18.19.9",
         "mocha": "^10.8.1",
