--- a/packages/@textlint/config-loader/package.json
+++ b/packages/@textlint/config-loader/package.json
@@ -54,6 +54,7 @@
         "rc-config-loader": "^4.1.3"
     },
     "devDependencies": {
+        "@types/debug": "^4.1.12",
         "@types/mocha": "^9.1.1",
         "@types/node": "^18.19.9",
         "mocha": "^10.8.1",
