--- a/packages/@textlint/legacy-textlint-core/package.json
+++ b/packages/@textlint/legacy-textlint-core/package.json
@@ -50,6 +50,7 @@
         "@textlint/textlint-plugin-text": "workspace:*"
     },
     "devDependencies": {
+        "@types/debug": "^4.1.12",
         "@types/node": "^18.19.9",
         "prettier": "^2.7.1",
         "typescript": "~5.3.3"
