--- a/packages/@textlint/markdown-to-ast/package.json
+++ b/packages/@textlint/markdown-to-ast/package.json
@@ -47,6 +47,7 @@
     },
     "devDependencies": {
         "@textlint/ast-tester": "workspace:*",
+        "@types/debug": "^4.1.12",
         "@types/mocha": "^9.1.1",
         "@types/node": "^18.19.9",
         "mkdirp": "^1.0.4",
