--- a/packages/@textlint/resolver/package.json
+++ b/packages/@textlint/resolver/package.json
@@ -47,7 +47,8 @@
     "tabWidth": 4
   },
   "devDependencies": {
-    "@types/mocha": "^10.0.9",
+    "@types/debug": "^4.1.12",
+    "@types/mocha": "^10.0.10",
     "@types/node": "^20.16.12",
     "mocha": "^10.8.1",
     "prettier": "^2.8.1",
