--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -8,3 +8,9 @@ packages:
   - packages/textlint-scripts/examples/*
   - test/*
   - website
+
+# Force all @textlint/ast-node-types references to use the workspace version
+# This prevents version conflicts where some packages might reference old versions (e.g., 13.4.1)
+# that cause TypeScript type incompatibility errors in monorepo
+overrides:
+  "@textlint/ast-node-types": "workspace:*"
