--- a/packages/@textlint/textlint-plugin-markdown/package.json
+++ b/packages/@textlint/textlint-plugin-markdown/package.json
@@ -39,11 +39,13 @@
         "watch": "tsc -b --watch"
     },
     "dependencies": {
-        "@textlint/markdown-to-ast": "workspace:*"
+        "@textlint/markdown-to-ast": "workspace:*",
+        "@textlint/types": "workspace:*"
     },
     "devDependencies": {
         "@textlint/kernel": "workspace:*",
         "@types/mocha": "^10.0.10",
+        "@types/react": "^18.3.18",
         "mocha": "^10.8.1",
         "rimraf": "^6.0.1",
         "textlint-rule-no-todo": "^2.0.1",
