tsconfig.json: Add reference to @textlint/types

--- a/packages/textlint-tester/tsconfig.json
+++ b/packages/textlint-tester/tsconfig.json
@@ -25,6 +25,9 @@
     },
     {
       "path": "../@textlint/textlint-plugin-text"
+    },
+    {
+      "path": "../@textlint/types"
     }
   ]
 }
