Update @types/node version in package.json and pnpm-lock.yaml

--- a/packages/textlint-scripts/examples/example-ts/package.json
+++ b/packages/textlint-scripts/examples/example-ts/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@textlint/types": "workspace:*",
+    "@types/node": "^18.19.9",
     "textlint-scripts": "workspace:*",
     "ts-node": "^10.9.2",
     "typescript": "~5.3.3"
